[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
solana-logger = "^2.1.0"
solana-client = "^2.1.0"
solana-program = "^2.1.0"
solana-program-test = "^2.1.0"
solana-program-pack = "^2.1.0"
solana-account-decoder = "^2.1.0"
solana-rent = "^2.1.0"
solana-account = "^2.1.0"
solana-sdk = "^2.1.0"
solana-instruction = "^2.1.0"
spl-token = "7.0.0"
spl-token-2022 = {version = "7.0.0", features = ["no-entrypoint"]}
spl-associated-token-account = "6.0.0"
spl-transfer-hook-interface = "=0.9.0"
spl-discriminator = "0.4"
spl-tlv-account-resolution = "0.9"

anchor-lang = { version = "0.32.1", features = ["event-cpi"]  }
anchor-spl = { version = "0.32.1", features = ["metadata", "token"]  }
bytemuck = { version = "^1.7.2", features = ["min_const_generics"] }
static_assertions = "1.1"
anyhow = "1.0.66"
hex-literal = "0.4.1"
solana-security-txt = "1.1.2"